# zorro

./: .gitignore  Annotated problems Aircraft Data.csv  FinalAircraftOntology.owl  Problem-extraction_NER.csv  Problem_extraction_NER.csv  Problem_extraction_with_NER_.ipynb  README.md  README2.md  READMEextention.md  action_extractions_regex.csv  aircraft.owl  aircraft2(with ChatGPT) .owl  aircraftOntology.owl  catalog.json  corect_NER_for_aircraft_.ipynb  gpt.ipynb  hdbscan.ipynb  heatmap-dendrogram.ipynb  knowledge_extraction_NER.csv  link-parts.ipynb  link-parts.py  linkml.yaml  links.tsv  log-extract-gpt.ipynb  log-extract-gpt.py  log-extract-ner.py  log-extract-regex.ipynb  log-extract-regex.py  log_extract_gpt.py  log_extract_ner.py  make-rdf.ipynb  make-rdf.py  make_catalog.py  make_prov.py  make_rdf_file.ipynb  ontology.html  ontology.shacl.ttl  ontology.ttl  part-links.tsv  partlinker.ipynb  (+14 more)
Fully-Annotated-Corpus/: fully annotated maintenance logbook.csv
generated-provenance/: extractions_gpt_trig.json  extractions_regex_trig.json  functions_trig.json  ner_train_model.json  part_links_regex.json  parts_trig.json  problem_extractions_ner.json  troubleshooting_trig.json
generated-rdf/: FinalAircraftOntology.ttl  combined.ttl  extractions_NER.ttl  extractions_chatgpt_4o.trig  extractions_chatgpt_4o.ttl  extractions_regex.trig  extractions_regex.ttl  functions.trig  functions.trig.txt  functions.ttl  part-links-regex-simplified.ttl  part-links-regex.ttl  part-links-simplified.ttl  parts-catalog.ttl  parts.trig  troubleshooting.trig  troubleshooting.ttl
(+145 files in other folders)
